--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "yup": "^0.32.11"
   }
 }
